# CLI_GUI

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  imgui.ini
cmake/: CLI_GUIConfig.cmake.in
docs/superpowers/plans/: 2026-05-05-cli11-gui-plan.md  2026-05-06-console-improvements.md  2026-05-06-file-dialog-browse.md  2026-05-06-file-or-dir-widget.md  2026-05-06-remaining-widgets.md  2026-05-06-required-options.md
docs/superpowers/specs/: 2026-05-05-cli11-gui-design.md
examples/: CMakeLists.txt
examples/01_basic/: main.cpp
examples/02_subcommands/: main.cpp
examples/03_custom_widgets/: main.cpp
examples/04_long_task/: main.cpp
examples/05_option_groups/: main.cpp
examples/06_colors_and_files/: main.cpp
examples/07_positional_and_vectors/: main.cpp
examples/08_full_app/: main.cpp
examples/09_positional/: main.cpp
examples/10_chinese_path/: main.cpp
include/CLI_GUI/: App.hpp  CLI_GUI.hpp  Encoding.hpp  GuiLauncher.hpp  WidgetMapper.hpp  WidgetType.hpp
include/CLI_GUI/detail/: BackendGLFW.hpp  ConsoleCapture.hpp  FileDialog.hpp  LayoutEngine.hpp  Win32SuppressConsole.hpp
resources/: cli_gui.rc
src/: CLI_GUI.cpp
tests/: CMakeLists.txt  catch2.hpp  test_app.cpp  test_flush.cpp  test_flush_real.cpp  test_gui_dataflow.cpp  test_widget_mapper.cpp
